tests/snapshots/writes__defaults_expand_to_every_table_and_yield_to_specific_entries.snap
---
source: tests/writes.rs
expression: "report(\"defaults_pass\", 0)"
---
notes
  ✓ alice  *       select all, delete deny            2/2 ops
  ✓ alice  update  where tenant_id = '…000a' → allow  affected 3 of 3 rows
  ✓ guest  *       deny                               4/4 ops
tags
  ✓ alice  *  select rows: tenant_id = '…000a', update deny, delete deny  3/3 ops
  ✓ guest  *  deny                                                        4/4 ops
0 failed · 14 passed · 0 inconclusive
