tests/snapshots/writes__delete_pass.snap
---
source: tests/writes.rs
expression: "report(\"delete_pass\", 0)"
---
notes
  ✓ alice  delete  where tenant_id = '…000a' → allow  affected 3 of 3 rows
  ✓ alice  delete  where tenant_id = '…000b' → deny   affected 0 of 3 rows
coverage 1/16 cells (6.2%) · 15 unspecified (warn)
notes
  ○ alice  select, insert, update
  ○ guest  select, insert, update, delete
tags
  ○ alice  select, insert, update, delete
  ○ guest  select, insert, update, delete
0 failed · 2 passed · 0 inconclusive
