tests/snapshots/writes__delete_using_true_lets_alice_delete_the_other_tenant.snap
---
source: tests/writes.rs
expression: "report(\"delete_using_true\", 1)"
---
notes
  ✓ alice  delete  where tenant_id = '…000a' → allow  affected 3 of 3 rows
  ✗ alice  delete  where tenant_id = '…000b' → deny   affected 3 of 3 rows (expected 0)
coverage 1/16 cells (6.2%) · 15 unspecified (warn)
notes
  ○ alice  select, insert, update
  ○ guest  select, insert, update, delete
tags
  ○ alice  select, insert, update, delete
  ○ guest  select, insert, update, delete
1 failed · 1 passed · 0 inconclusive
