tests/snapshots/writes__insert_deny_fails_when_a_public_permissive_policy_applies.snap
---
source: tests/writes.rs
expression: "report(\"insert_deny_public_policy\", 1)"
---
notes
  ✗ alice  insert  deny  `app` has INSERT privilege and permissive policy `suggest` applies to it; write `insert` cases with `values` to check which rows it accepts
  ✓ guest  insert  deny  deny (no privilege)
coverage 2/16 cells (12.5%) · 14 unspecified (warn)
notes
  ○ alice  select, update, delete
  ○ guest  select, update, delete
tags
  ○ alice  select, insert, update, delete
  ○ guest  select, insert, update, delete
1 failed · 1 passed · 0 inconclusive
