tests/snapshots/writes__insert_deny_pass_without_a_privilege_or_a_policy.snap
---
source: tests/writes.rs
expression: "report(\"insert_deny_pass\", 0)"
---
notes
  ✓ alice  insert  deny  deny (no policy)
  ✓ guest  insert  deny  deny (no privilege)
0 failed · 2 passed · 0 inconclusive
