tests/snapshots/writes__insert_without_a_policy_denies_the_allowed_row.snap
---
source: tests/writes.rs
expression: "report(\"insert_no_policy\", 1)"
---
notes
  ✗ alice  insert  values (id = 7, tenant_id = '…000a', author_id = '…11ce', body = 'mine') → allow   denied: new row violates row-level security policy for table "notes" (SQLSTATE 42501)
  ✓ alice  insert  values (id = 8, tenant_id = '…000b', author_id = '…11ce', body = 'theirs') → deny  permission denied
1 failed · 1 passed · 0 inconclusive
